# snake2D

./: .clang-format  CMakeLists.txt  conanfile.py
.github/workflows/: ci.yml
cmake/: BuildSettings.cmake  CompilerSettings.cmake  Packages.cmake  TestUtils.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Game.cpp  PositionGenerator.cpp  Snake.cpp  Stopwatch.cpp
src/game/include/Snake2D/: Direction.hpp  Game.hpp  Playfield.hpp  Position.hpp  PositionGenerator.hpp  Snake.hpp  Stopwatch.hpp  Velocity.hpp
src/renderer/: CMakeLists.txt  Renderer.cpp  SpriteFragmentShader.cpp  SpriteProgram.cpp  SpriteRenderer.cpp  SpriteVertexShader.cpp
src/renderer/include/Snake2D/: Renderer.hpp  SpriteFragmentShader.hpp  SpriteProgram.hpp  SpriteRenderer.hpp  SpriteVertexShader.hpp
src/resources/: CMakeLists.txt  Image.cpp
src/resources/include/Snake2D/: Image.hpp
tests/: CMakeLists.txt  test_Game.cpp  test_Image.cpp  test_PositionGenerator.cpp  test_Snake.cpp
